# deer-flow

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  README_fr.md  README_ja.md  README_ru.md  README_zh.md  RELEASING.md  SECURITY.md  config.example.yaml  extensions_config.example.json
.agent/skills/engineer-system-change/: SKILL.md
.github/ISSUE_TEMPLATE/: bug-report.yml
.github/workflows/: backend-unit-tests.yml  chart.yaml  container.yaml  nightly.yaml  skill-review-ci.yml  verify-versions.yml
backend/: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
backend/app/channels/: commands.py  dingtalk.py  discord.py  feishu.py  feishu_run_policy.py  github.py  manager.py  run_policy.py  runtime_config_store.py  service.py  slack.py  telegram.py  wechat.py  wecom.py
backend/app/gateway/: __init__.py  app.py  auth_middleware.py  browser_capability.py  checkpoint_lineage.py  csrf_middleware.py  deps.py  internal_auth.py  path_utils.py  services.py  trace_middleware.py
backend/app/gateway/auth/: errors.py  oidc_state.py  session_cookie.py  session_cookie_state.py
backend/app/gateway/github/: __init__.py  app_auth.py  dispatcher.py  identity.py  prompts.py  registry.py  run_policy.py  triggers.py
backend/app/gateway/routers/: __init__.py  agents.py  artifacts.py  assistants_compat.py  auth.py  browser.py  channel_connections.py  console.py  features.py  github_webhooks.py  input_polish.py  mcp.py  memory.py  runs.py  scheduled_tasks.py  skills.py  suggestions.py  thread_runs.py  threads.py  uploads.py
backend/app/scheduler/: __init__.py  service.py
backend/docs/: API.md  AUTH_DESIGN.md  AUTO_TITLE_GENERATION.md  CONFIGURATION.md  GITHUB_AGENTS.md  GUARDRAILS.md  IM_CHANNEL_CONNECTIONS.md  MCP_SERVER.md  README.md  RUN_EVENT_STREAM.md  STREAMING.md  TITLE_GENERATION_IMPLEMENTATION.md  TUI.md  summarization.md
backend/samples/other_agent_demo/: README.md  deermem_manager.yaml
backend/scripts/: _autogen_revision.py  migrate_agents_to_db.py  migrate_memory_markdown.py  migrate_user_isolation.py
backend/scripts/benchmark/: bench_checkpoint_channels.py  bench_sandbox_provider.py  summarize_bench.py  summarize_checkpoint_channels.py
backend/tests/: _replay_fixture.py  conftest.py  manual_browser_live_check.py  test_acp_config.py  test_additional_channel_connections.py  test_agent_model_settings.py  test_agent_storage_backend.py  test_agent_store_sql.py  test_agents_router_model_settings.py  test_aio_sandbox.py  test_aio_sandbox_local_backend.py  test_aio_sandbox_provider.py  test_app_config_name_indexes.py  test_app_config_reload.py  test_artifacts_router.py  test_auth_type_system.py  test_authorization_enforcement.py  test_authorization_principal.py  test_authorization_provider.py  test_authorization_runtime.py  test_authorization_tool_filter.py  test_base_to_dict.py  test_bench_checkpoint_channels.py  test_bench_sandbox_provider.py  test_boxlite_provider.py  test_branch_history_seed.py  test_brave_tools.py  test_browser_automation.py  test_browser_router.py  test_browserless_client.py  test_cancel_run_idempotent.py  test_channel_connections_router.py  test_channel_user_id_env.py  test_channels.py  test_checkpoint_mode.py  test_checkpoint_state.py  test_checkpointer.py  test_checkpointer_none_fix.py  test_clarification_middleware.py  test_client.py  (+280 more)
backend/tests/blocking_io/: test_agents_router.py  test_aio_sandbox_get.py  test_artifacts_router.py  test_discord_channel_state.py  test_dynamic_context_middleware.py  test_jsonl_run_event_store.py  test_mcp_router.py  test_persistence_bootstrap.py  test_persistence_engine_sqlite.py  test_sandbox_release.py  test_skills_install.py  test_skills_reload.py  test_uploads_router.py  test_wechat_channel_state.py  test_workspace_changes_recorder.py
backend/tests/fixtures/replay/: write_read_file.ultra.events.json
backend/tests/monocle/: README.md  _helpers.py  conftest.py  requirements.txt  test_deerflow.py
backend/tests/monocle/traces/: web_research_ev_battery.json
backend/tests/support/detectors/: blocking_io_static.py  thread_boundaries.py
contracts/: run_event_stream_contract.json  slash_skill_contract.json  subagent_status_contract.json
contracts/skill_review/: package_snapshot.v1.schema.json  review_facts.v1.schema.json  review_report.v1.schema.json
deploy/helm/deer-flow/: Chart.yaml  README.md  values.yaml
docker/: dev-entrypoint.sh  docker-compose-dev.yaml  docker-compose.yaml
docker/nginx/: nginx.conf  nginx.local.conf
docker/provisioner/: README.md  app.py
docs/plans/: 2026-07-10-pluggable-authorization-implementation-notes.md  2026-07-10-pluggable-authorization-rfc.md  2026-07-15-authz-phase1a-implementation-plan.md  2026-07-15-authz-phase1a1-trusted-principal-implementation-plan.md  2026-07-17-remember-login.md  STORAGE_REWRITE_CHANGES.md  STORAGE_REWRITE_PLAN.md
docs/superpowers/plans/: 2026-06-29-community-browserless-web-capture.md  2026-07-01-scheduled-tasks-mvp.md  2026-07-02-read-before-write-gate.md
docs/superpowers/specs/: 2026-06-13-deerflow-tui.md  2026-07-01-scheduled-tasks-mvp-design.md  2026-07-02-read-before-write-gate-design.md  2026-07-02-scheduled-tasks-i18n-recipes-design.md
frontend/: AGENTS.md  CLAUDE.md  Dockerfile  README.md  package.json  playwright.config.ts  playwright.real-backend.config.ts  pnpm-lock.yaml  rstest.config.ts
frontend/src/: mdx-components.ts  version.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/hooks/: use-mobile.ts
frontend/src/lib/: ime.ts
frontend/src/styles/: globals.css
frontend/tests/e2e-real-backend/: auth-disabled-contract.spec.ts  multi-run-order.spec.ts  (+1 more)
plans/: subagent-card-runtime-metadata.md
scripts/: bump_version.sh  check_chart_sandbox_service.sh  check_config_version.sh  deploy.sh  detect_uv_extras.py  docker.sh  doctor.py  nginx.sh  review_changed_public_skills.py  serve.sh  setup-sandbox.sh  support_bundle.py  verify_versions.sh
scripts/wizard/: providers.py  writer.py
(+341 files in other folders)
